--- a/Develop/client/index.html
+++ b/Develop/client/index.html
@@ -26,7 +26,7 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
+            ><img src="./src/images/logo.png"
           /></div>
     </nav>
 
@@ -34,7 +34,13 @@
       <div class="loading-container">
         <div class="loading-spinner"></div>
       </div>
+      <!-- Container for the text editor -->
+      <div id="editor-container"></div>
     </main>
+
+    <!-- Load bundled JavaScript files -->
+    <script src="main.bundle.js"></script>
+    <script src="install.bundle.js"></script>
     
   </body>
 </html>
