logo is now visible

--- a/client/index.html
+++ b/client/index.html
@@ -25,22 +25,16 @@
       </div>
      <h1> Just Another Text Editor</h1>
      
-      <div class="navbar-brand" 
-            ><img src="./src/images/logo.png"
-          /></div>
+     <div class="navbar-brand" 
+       ><img src="./assets/icons/icon_96x96.png"
+     /></div>
     </nav>
 
     <main id="main">
       <div class="loading-container">
         <div class="loading-spinner"></div>
       </div>
-      <!-- Container for the text editor -->
-      <div id="editor-container"></div>
     </main>
-
-    <!-- Load bundled JavaScript files -->
-    <script src="main.bundle.js"></script>
-    <script src="install.bundle.js"></script>
     
   </body>
 </html>
